# guile-orca

./: .gitignore  AUTHORS  Makefile.am  README.md  TODO  bootstrap  configure.ac  guix.scm  orca.scm  pre-inst-env.in
examples/: distributed-reduce.scm  rpc-apply-bcast-sum.scm  rpc-apply-scatter-sum.scm  rpc-bootstrap.scm  rpc-make-throw-error.scm  rpc-print-process-ids.scm  rpc-scatter-messages.scm  rpc-stream-fold-largest-sum.scm  rpc-stream-for-each-print.scm  rpc-stream-map-sum.scm
orca/: config.scm.in  internal.scm
tests/: test_serialization_rpc-apply-bcast.scm  test_serialization_rpc-apply-scatter.scm
